src/scss/main.scss
/* ... */
.braintree-sheet__content--button {
  padding: 20px;
  text-align: center;
}

.braintree-form__field-group--has-error {
  .braintree-form__icon-container {
    margin-top: -12px;
  }
}

.braintree-form__hosted-field {
  transition: border-color 100ms;
}

.braintree-sheet__content--form {
  padding: 10px 15px 10px 10px;

  .braintree-form__field-group {
    padding-left: 5px;
    margin-bottom: 10px;

    &.braintree-form__field-group--has-error {
      margin-bottom: 3px;

      .braintree-form__field .braintree-form__hosted-field {
        border-color: $error-color;
      }
    }

    .braintree-form__label {
      color: $text-color;
      display: block;
      font-size: 14px;
      font-weight: normal;
      line-height: 1.4;
      margin: 0;
      padding: 0;
      text-align: left;
    }

    .braintree-form__descriptor {
      color: $border-color;
      font-size: 13px;
      margin-left: 6px;
    }

    .braintree-form__field {
      position: relative;

      .braintree-form__icon-container {
        position: absolute;
        top: 50%;
        margin-top: -14px;
        right: 11px;
      }

      .braintree-form__hosted-field {
        border: 1px solid $black-75;
        height: 44px;
        margin: 4px 0 0;
        padding: 0px 8px 0px 8px;

        &.braintree-form__field--valid {
          border-color: $black-45;
        }
      }
    }

    .braintree-form__field-error-icon,
    .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--has-error .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--has-error.braintree-form__field-group--card-type-known .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--has-error.braintree-form__field-group--is-focused .braintree-form__field-secondary-icon {
      transform: scale(0);
      display: none;
    }

    &.braintree-form__field-group--has-error .braintree-form__field-error-icon,
    &.braintree-form__field-group--card-type-known .braintree-form__field-secondary-icon,
    &.braintree-form__field-group--is-focused .braintree-form__field-secondary-icon {
      display: block;
    }

    .braintree-form__field-error {
      color: $error-color;
      font-size: 13px;
      margin: 3px 0 3px 0;
      padding: 0;
      line-height: 1.4;
      display: none;
    }

    .braintree-form__field-error-icon {
      margin-top: 2px;

      use {
        fill: $error-color;
      }
    }

    &.braintree-form__field-group--has-error .braintree-form__field-error {
      display: block;
    }
  }

  .braintree-form__flexible-fields {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;

    .braintree-form__field-group {
      flex-basis: 190px;
      flex-grow: 1;
    }
  }
}

.braintree-method {
  background-color: white;
  border-color: $border-color;
  border-style: solid;
  border-width: 0 1px 1px 1px;
  box-shadow: none;
  cursor: pointer;
  padding: 14px 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  width: 99%;
  position: relative;
  z-index: 0;
  transition: $border-transition;
 
  &:first-child {
    border-radius: 4px 4px 0 0;
    border-top-width: 1px;
  }

  &:last-child {
    border-radius: 0 0 4px 4px;
  }

  &:only-child {
    border-radius: 4px;
  }

  .braintree-method__logo {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .braintree-method__label {
    color: $text-color;
    font-size: 16px;
    margin-left: 20px;
    text-align: left;
    transition: font-weight 300;
    flex-grow: 1;

    .braintree-method__label--small {
      font-weight: normal;
      font-size: 11px;
    }
  }

  .braintree-method__check {
    margin-right: 7px;
    height: 41px;
    width: 41px;
    border-radius: 100px;
    padding: 7px 10px 10px 10px;
    background-color: $background-color;
    fill: $background-color;
    transform: scale(0);
    transition: transform 300ms $curve-easeOutBack;

    svg {
      width: 100%;
    }
  }
}

.braintree-methods--active .braintree-method--active {
  -webkit-box-shadow: 0px 0px 0px 2px #219653;
  -moz-box-shadow: 0px 0px 0px 2px #219653;
  box-shadow: 0px 0px 0px 2px #219653;
  border-radius: 5px;
  border-color: rgba(0,0,0,0);
  width: 100%;
  margin-top: -1px;
  margin-bottom: -1px;
  opacity: 1;
  z-index: 1;

  .braintree-method__check {
    background-color: $highlight-color;
    fill: white;
    transform: scale(1);
  }

  .braintree-method__label {
    font-weight: bold;
  }
}

.braintree-toggle {
  background: $background-color;
  border-radius: 4px;
  color: $text-color;
  cursor: pointer;
  font-size: 14px;
  margin: 0 auto 0 auto;
  padding: 18px;
  text-align: center;
  width: 99%;

  span {
    border-bottom: 1px solid $border-color;
    padding-bottom: 1px;
  }

  &.braintree-hidden {
    display: none;
  }
}

.braintree-method__check-container {
  position: relative;

  &:before {
    content: '';
    position: absolute;
    width: 41px;
    height: 41px;
    background: $background-color;
    border-radius: 100px;
    transform: scale(0.9);
  }
}

.braintree-methods {
  display: none;
  margin: 0 auto 13px auto;
}

.braintree-methods .braintree-methods,
.braintree-options .braintree-options,
.braintree-paypal .braintree-paypal,
.braintree-card .braintree-card {
  display: block;
}

[data-braintree-id="methods-container"] {
  &.braintree-methods-container--inactive {
    .braintree-method {
      box-shadow: 0 0 0 0 #fff;
      opacity: 0.1;
    }

    .braintree-method__check {
      transform: scale(0);
    }      
  }
}

[data-braintree-id="other-ways-to-pay"] {
  display: none;
}

[data-braintree-id="choose-a-way-to-pay"] {
  display: block;
}

.braintree-methods [data-braintree-id="other-ways-to-pay"],
.braintree-paypal [data-braintree-id="other-ways-to-pay"],
.braintree-card [data-braintree-id="other-ways-to-pay"] {
  display: block;
}
/* ... */

